# voxl_airlab_thirdparty

./: .gitignore  .gitmodules  README.md  build_thirdparty.sh  build_thirdparty_minimal.sh  install_dependencies.sh
build_scripts/: build_ceres.sh  build_kindr.sh  build_orbslam3.sh  build_pangolin.sh  build_vins_core.sh
vins_core/: CMakeLists.txt
vins_core/camera_models/: CMakeLists.txt
vins_core/camera_models/cmake/: camera_modelsConfig.cmake.in
vins_core/vins_estimator/: CMakeLists.txt
vins_core/vins_estimator/cmake/: vins_estimatorConfig.cmake.in
vins_core/vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_data_type.h  feature_manager.cpp  feature_manager.h  integration_base.h  parameters.cpp  parameters.h
vins_core/vins_estimator/src/factor/: CMakeLists.txt  depthFactor.h  imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  pose_manifold.cpp  pose_manifold.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamDepthFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h  reprojectionDepthFactor.h
vins_core/vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_core/vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.h
vins_core/vins_estimator/src/publisher/: PublisherCallbacks.h
